<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anant.jhack.User"
    android:background="@drawable/dotappbge">

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="20dp"
        app:cardElevation="5dp"
        android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/a_dot_h1"
            android:inputType="textEmailAddress"
            android:id="@+id/login"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/a_dot_h2"
            android:inputType="textPassword"
            android:id="@+id/pass"
            android:layout_below="@id/login"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_dot_button"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:background="@drawable/button"
            android:id="@+id/submit"
            android:layout_below="@id/pass"
            android:layout_gravity="center"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    </RelativeLayout>