<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.anant.jhack.User">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="15dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_centerInParent="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/a_c_edit_hint"
                    android:inputType="number"
                    android:id="@+id/adhar"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/a_user"
                    android:id="@+id/mob"
                    android:inputType="phone"
                    android:layout_below="@id/login"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_dot_button"
                android:textColor="#fff"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:id="@+id/submit"
                android:onClick="setSubmit"
                android:layout_below="@id/pass"

                android:layout_gravity="center"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Otp"
                    android:id="@+id/otp2"
                    android:inputType="phone"
                    android:layout_below="@id/login"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_dot_button"
                android:textColor="#fff"
                android:layout_margin="10dp"
                android:background="@drawable/button"
                android:id="@+id/submit2"
                android:onClick="verify"
                android:layout_below="@id/pass"
                android:layout_gravity="center"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>